# mongo-automation

./: .gitignore  README.md
ansible/: ansible.cfg  playbook.yml
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/api/: replica_set_api.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: clusters.py  health.py
backend/app/core/: config.py
backend/models/: replica_set.py
backend/services/: terraform_service.py
backend/validators/: mongodb_validator.py
cli/: README.md  dbprovision.py  install.sh  requirements.txt  setup.py
docs/claude/: git-rule.md
docs/prd/: backend-prd.md  branding-guide.md  parameter-spec.md  phase-1-infrastructure.md  phase-2-server-configuration.md  phase-3-mongodb-deployment.md  phase-4-monitoring-system.md  phase-5-operational-tools.md  step.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedTitle.tsx  ClusterCreationCard.tsx  Header.tsx
frontend/src/pages/: HomePage.tsx
infra/ansible/playbooks/: configure-local-mongodb.yml
infra/ansible/templates/: mongod.conf.j2
infra/scripts/: deploy-config-servers-gcp.sh
infra/terraform/: README.md  main.tf  mongo-config-servers.tf  mongodb-cluster.tf  terraform.tfvars.cluster.example  terraform.tfvars.config-server.example  terraform.tfvars.example  terraform.tfvars.legacy.example
infra/terraform/main/: main.tf  outputs.tf  variables.tf
prd-docs/: infra-prd.md
terraform/: main.tf
(+19 files in other folders)
